[package]
name = "minecraft_proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures-util = "0.3.28"
nom = "7.1.3"
tokio = { version = "1.32.0", features = ["rt-multi-thread", "macros", "net", "io-util", "time"] }
